feat: implement strict validations and JSON error handling in ContactController