@@ -6,6 +6,7 @@ import com.fer_santos.directory.utils.StorageManager;
 import io.javalin.http.Context;
 
 import java.util.ArrayList;
+import java.util.Map;
 
 public class ContactController {
 
@@ -37,15 +38,23 @@ public class ContactController {
       try {
         Contact newContact = ctx.bodyAsClass(Contact.class);
 
-        if (newContact.getName() == null || newContact.getName().isBlank() ||
-            newContact.getPhoneNumber() == null || newContact.getPhoneNumber().isBlank()) {
-          ctx.status(400).result("Fields 'name' and 'phoneNumber' cannot be null or empty.");
+        if (newContact.getName() == null || newContact.getName().trim().isEmpty() ||
+            newContact.getPhoneNumber() == null || newContact.getPhoneNumber().trim().isEmpty()) {
+          ctx.status(400).json(Map.of("error", "First Name and Phone Number are required"));
           return;
+        }
+
+        // Gracefully handle optional fields
+        if (newContact.getLastName() != null && newContact.getLastName().trim().isEmpty()) {
+            newContact.setLastName(null);
+        }
+        if (newContact.getEmail() != null && newContact.getEmail().trim().isEmpty()) {
+            newContact.setEmail(null);
         }
 
         User owner = currentUsers.stream().filter(u -> u.getEmail().equalsIgnoreCase(email)).findFirst().orElse(null);
         if (owner == null) {
-          ctx.status(404).result("User not found.");
+          ctx.status(404).json(Map.of("error", "User not found."));
           return;
         }
 
@@ -54,7 +63,7 @@ public class ContactController {
         ctx.status(201).json(newContact);
 
       } catch (Exception e) {
-        ctx.status(400).result("Invalid JSON body or format.");
+        ctx.status(400).json(Map.of("error", "Invalid JSON body or format."));
       }
     }
 
@@ -96,10 +105,18 @@ public class ContactController {
         }
 
         Contact updatedContact = ctx.bodyAsClass(Contact.class);
-        if (updatedContact.getName() == null || updatedContact.getName().isBlank() ||
-            updatedContact.getPhoneNumber() == null || updatedContact.getPhoneNumber().isBlank()) {
-          ctx.status(400).result("Fields 'name' and 'phoneNumber' are mandatory.");
+        if (updatedContact.getName() == null || updatedContact.getName().trim().isEmpty() ||
+            updatedContact.getPhoneNumber() == null || updatedContact.getPhoneNumber().trim().isEmpty()) {
+          ctx.status(400).json(Map.of("error", "First Name and Phone Number are required"));
           return;
+        }
+
+        // Gracefully handle optional fields
+        if (updatedContact.getLastName() != null && updatedContact.getLastName().trim().isEmpty()) {
+            updatedContact.setLastName(null);
+        }
+        if (updatedContact.getEmail() != null && updatedContact.getEmail().trim().isEmpty()) {
+            updatedContact.setEmail(null);
         }
 
         // Ensure ID is maintained
@@ -110,7 +127,7 @@ public class ContactController {
         ctx.status(200).json(updatedContact);
 
       } catch (Exception e) {
-        ctx.status(500).result("Persistence error.");
+        ctx.status(400).json(Map.of("error", "Invalid JSON body or format."));
       }
     }
 
